--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/VetHubLogo.png.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Complete Ecommerce website" />
+    <meta name="description" content="MedVet - Sistema de Gestão Veterinária" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -21,7 +21,7 @@
       type="text/css"
     />
 
-    <title>Loja Online</title>
+    <title>MedVet</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
